force-app/main/default/objects/JBCXM__PlaybookInfo__c/JBCXM__PlaybookInfo__c.object-meta.xml
<CustomObject>
    <label>Playbook Info</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Playbook Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playbook Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>