force-app/main/default/objects/JBCXM__PlaybookInfo__c/fields/JBCXM__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>